# casse-briques

./: .editorconfig  .gitattributes  CMakeLists.txt  README.md  download-deps.py
assets/maps/: grille1.txt  grille2.txt
code/: client-gui.c  grille1.txt
programme/: download-deps.py  grille.c
programme/client/: callbacks.c  callbacks.h
programme/client/cli/: askIntInput.c  askIntInput.h  client.c  client.h  grille.c  grilleDisplay.c  grilleDisplay.h
programme/client/cli/linux_compatibility/: conio_polyfill.c  conio_polyfill.h
programme/client/cli/windows_compatibility/: winterm.c  winterm.h
programme/client/gui/: client-gui.c  freetype-functions.c  freetype-functions.h  sdl-functions.c  sdl-functions.h
programme/common/: structures.h
programme/common/game_rules/: gameRules.c  gameRules.h
programme/common/linked_list/: linked_lists.c  linked_lists.h
programme/common/network/winsock/: winsock.c  winsock.h  winsock_utils.c  winsock_utils.h
programme/server/: server.c  server.h
